Update page - food-resources.html 034abfca33a282b05588815f4756a2aa7927306f

--- a/vi/state-dashboard/index.html
+++ b/vi/state-dashboard/index.html
@@ -151,7 +151,7 @@
           <h1>Theo dÃµi tÃ¬nh hÃ¬nh COVID-19 táº¡i California</h1>
           
             <p class="small-text">Cập nhật mới nhất&nbsp;
-                14 tháng 3, 2021 lúc 11:00</p>
+                15 tháng 3, 2021 lúc 11:00</p>
           
         </div>
       </div>
@@ -168,8 +168,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">Cáº­p nháº­t cho 14 tháng 3, 2021</h2>
-        <p>Ká» tá»« 14 tháng 3, California cÃ³ 3,526,335 ca nhiá»m COVID-19 ÄÆ°á»£c xÃ¡c nháº­n, dáº«n Äáº¿n 55,235 ca tá»­ vong.</p>
+        <h2 class="text-center color-purple">Cáº­p nháº­t cho 15 tháng 3, 2021</h2>
+        <p>Ká» tá»« 15 tháng 3, California cÃ³ 3,528,795 ca nhiá»m COVID-19 ÄÆ°á»£c xÃ¡c nháº­n, dáº«n Äáº¿n 55,330 ca tá»­ vong.</p>
       </div>
     </div>
 
@@ -178,23 +178,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ca Máº¯c</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,526,335</strong> <span class="text-300">tá»ng</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,772</strong> <span class="text-300">hÃ´m nay</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,528,795</strong> <span class="text-300">tá»ng</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,460</strong> <span class="text-300">hÃ´m nay</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.4 <span class="text-300">ca má»i trÃªn 100 nghÃ¬n ngÆ°á»i</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.3 <span class="text-300">ca má»i trÃªn 100 nghÃ¬n ngÆ°á»i</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ca Tá»­ Vong</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,235</strong> <span class="text-300">tá»ng</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>140</strong> <span class="text-300">hÃ´m nay</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,330</strong> <span class="text-300">tá»ng</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>95</strong> <span class="text-300">hÃ´m nay</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -208,29 +208,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">XÃ©t Nghiá»m</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,099,687</strong> <span class="text-300">tá»ng</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>226,580</strong> <span class="text-300">hÃ´m nay</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,263,837</strong> <span class="text-300">tá»ng</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>213,283</strong> <span class="text-300">hÃ´m nay</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 2% <span class="text-300">xÃ©t nghiá»m dÆ°Æ¡ng tÃ­nh</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.9% <span class="text-300">xÃ©t nghiá»m dÆ°Æ¡ng tÃ­nh</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">ÄÃ£ ÄÆ°á»£c TiÃªm Váº¯c-xin</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>11,785,750</strong> <span class="text-300">tá»ng</span>           </div>           
+          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>12,172,948</strong> <span class="text-300">tá»ng</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">ÄÃ£ cáº­p nháº­t 14 tháng 3, 2021, vá»i dá»¯ liá»u tá»« 13 tháng 3, 2021.</p>
+        <p class="small-text">ÄÃ£ cáº­p nháº­t 15 tháng 3, 2021, vá»i dá»¯ liá»u tá»« 14 tháng 3, 2021.</p>
 
         <p class="small-text">LÆ°u Ã½: Tá»· lá» ca máº¯c ÄÆ°á»£c dá»±a trÃªn má»©c trung bÃ¬nh 7 ngÃ y vá»i thá»i gian trá» lÃ  7 ngÃ y. Tá»· lá» ca tá»­ vong dá»±a ÄÆ°á»£c trÃªn má»©c trung bÃ¬nh 7 ngÃ y vá»i thá»i gian trá» lÃ  21 ngÃ y do bÃ¡o cÃ¡o cháº­m trá». CÃ¡c ca xÃ©t nghiá»m cÃ³ káº¿t quáº£ dÆ°Æ¡ng tÃ­nh ÄÆ°á»£c dá»±a trÃªn má»©c trung bÃ¬nh 7 ngÃ y mÃ  khÃ´ng cÃ³ thá»i gian trá». Thay Äá»i theo hÆ°á»ng ÄÆ°á»£c so sÃ¡nh vá»i khoáº£ng thá»i gian 7 ngÃ y trÆ°á»c ÄÃ³. Dá»¯ liá»u do SÆ¡Ì Y Táº¿ CÃ´ng Cá»ng California cung cáº¥p.</p>
       </div>
@@ -276,7 +276,7 @@
 
 
 
-<p>California cÃ³ 3,526,335 ca nhiá»m COVID-19 ÄÆ°á»£c xÃ¡c nháº­n, dáº«n Äáº¿n 55,235 ca tá»­ vong.</p>
+<p>California cÃ³ 3,528,795 ca nhiá»m COVID-19 ÄÆ°á»£c xÃ¡c nháº­n, dáº«n Äáº¿n 55,330 ca tá»­ vong.</p>
 
 
 
@@ -311,7 +311,7 @@
 
 
 
-<p>Tá»ng sá» káº¿t quáº£ xÃ©t nghiá»m cháº©n ÄoÃ¡n COVID-19 táº¡i California lÃ  51,099,687, tÄng 226,580 xÃ©t nghiá»m so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³. Tá»· lá» xÃ©t nghiá»m dÆ°Æ¡ng tÃ­nh trong 7 ngÃ y qua lÃ  2%.</p>
+<p>Tá»ng sá» káº¿t quáº£ xÃ©t nghiá»m cháº©n ÄoÃ¡n COVID-19 táº¡i California lÃ  51,263,837, tÄng 213,283 xÃ©t nghiá»m so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³. Tá»· lá» xÃ©t nghiá»m dÆ°Æ¡ng tÃ­nh trong 7 ngÃ y qua lÃ  1.9%.</p>
 
 
 
@@ -346,7 +346,7 @@
 
 
 
-<p>Tá»ng sá» ca nháº­p viá»n do cÃ¡c ca nhiá»m COVID-19 ÄÃ£ xÃ¡c nháº­n vÃ  Äang nghi ngá» táº¡i California lÃ  3,879, an increase of 190 so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³. Tá»ng sá» bá»nh nhÃ¢n ICU do cÃ¡c ca nhiá»m COVID-19 ÄÃ£ xÃ¡c nháº­n vÃ  Äang nghi ngá» táº¡i California lÃ  959, a decrease of 40 so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³.</p>
+<p>Tá»ng sá» ca nháº­p viá»n do cÃ¡c ca nhiá»m COVID-19 ÄÃ£ xÃ¡c nháº­n vÃ  Äang nghi ngá» táº¡i California lÃ  3,557, a decrease of 18 so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³. Tá»ng sá» bá»nh nhÃ¢n ICU do cÃ¡c ca nhiá»m COVID-19 ÄÃ£ xÃ¡c nháº­n vÃ  Äang nghi ngá» táº¡i California lÃ  939, a decrease of 20 so vá»i tá»ng sá» cá»§a ngÃ y trÆ°á»c ÄÃ³.</p>
 
 
 
