--- a/zh-hans/state-dashboard/index.html
+++ b/zh-hans/state-dashboard/index.html
@@ -149,7 +149,7 @@
           <h1>å å·COVID-19è¿½è¸ª</h1>
           
             <p class="small-text">最后更新时间&nbsp;
-                2021年3月14日, 上午11:00</p>
+                2021年3月15日, 上午11:00</p>
           
         </div>
       </div>
@@ -166,8 +166,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">æ´æ°äº 2021年3月14日</h2>
-        <p>æªè³2021年3月14日ï¼å å·å±æ3,526,335ä¾COVID-19ç¡®è¯çä¾ï¼é æ55,235äººæ­»äº¡ã</p>
+        <h2 class="text-center color-purple">æ´æ°äº 2021年3月15日</h2>
+        <p>æªè³2021年3月15日ï¼å å·å±æ3,528,795ä¾COVID-19ç¡®è¯çä¾ï¼é æ55,330äººæ­»äº¡ã</p>
       </div>
     </div>
 
@@ -176,23 +176,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">çä¾æ°</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,526,335</strong> <span class="text-300">æ»å±</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>2,772</strong> <span class="text-300">ä»æ¥</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,528,795</strong> <span class="text-300">æ»å±</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>2,460</strong> <span class="text-300">ä»æ¥</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 6.4 <span class="text-300">æ¯100Käººä¸­çæ°å¢çä¾æ°</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 6.3 <span class="text-300">æ¯100Käººä¸­çæ°å¢çä¾æ°</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">æ­»äº¡æ°</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>55,235</strong> <span class="text-300">æ»å±</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>140</strong> <span class="text-300">ä»æ¥</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>55,330</strong> <span class="text-300">æ»å±</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>95</strong> <span class="text-300">ä»æ¥</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -206,29 +206,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">æ£æµæ°</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,099,687</strong> <span class="text-300">æ»å±</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>226,580</strong> <span class="text-300">ä»æ¥</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,263,837</strong> <span class="text-300">æ»å±</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>213,283</strong> <span class="text-300">ä»æ¥</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 2%<span class="text-300">æ£æµåé³æ§ç</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 1.9%<span class="text-300">æ£æµåé³æ§ç</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">æ½æçç«èæ°</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>11,785,750</strong> <span class="text-300">æ»å±</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>12,172,948</strong> <span class="text-300">æ»å±</span>           </div>
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">æ ¹æ®2021年3月13日çæ°æ®å¨2021年3月14日æ´æ°ã</p>
+        <p class="small-text">æ ¹æ®2021年3月14日çæ°æ®å¨2021年3月15日æ´æ°ã</p>
 
         <p class="small-text">æ³¨ï¼æ£ççä¸º7æ¥å¹³åæ°æ®ï¼æ7å¤©çæ»åæãæ­»äº¡çä¸º7æ¥å¹³åæ°æ®ï¼æ21å¤©çæ»åæï¼å ä¸ºæ¥åæå»¶è¿ãæ£æµåé³æ§çä¸º7æ¥å¹³åæ°æ®ï¼æ æ»åæãå®åååä¸ä¸ä¸ä¸ª7æ¥å¨æåæ¯è¾ãæ°æ®ç±å å·å¬å±å«çå± (California Department of Public Health) æä¾ã</p>
       </div>
@@ -274,7 +274,7 @@
 
 
 
-<p>å å·å±æ3,526,335ä¾COVID-19ç¡®è¯çä¾ï¼é æ55,235äººæ­»äº¡ã</p>
+<p>å å·å±æ3,528,795ä¾COVID-19ç¡®è¯çä¾ï¼é æ55,330äººæ­»äº¡ã</p>
 
 
 
@@ -309,7 +309,7 @@
 
 
 
-<p>å å·çCOVID-19è¯æ­æ£æµç»ææ»æ°è¾¾å°äº51,099,687ï¼è¾åä¸å¤©çæ»æ°å¢å äº226,580ãè¿å»7å¤©çæ£æµåé³æ§çä¸º2%ã</p>
+<p>å å·çCOVID-19è¯æ­æ£æµç»ææ»æ°è¾¾å°äº51,263,837ï¼è¾åä¸å¤©çæ»æ°å¢å äº213,283ãè¿å»7å¤©çæ£æµåé³æ§çä¸º1.9%ã</p>
 
 
 
@@ -344,7 +344,7 @@
 
 
 
-<p>å¨å å·å ç¡®è¯åçä¼¼ææCOVID-19èä½é¢çäººæ°æ»å±è¾¾å°äº3,879ï¼an increase of 190æ¥èªåä¸å¤©çæ»æ°ãå¨å å·å ç¡®è¯åçä¼¼ææCOVID-19èè¿å¥ICUçäººæ°æ»å±è¾¾å°äº959ï¼a decrease of 40æ¥èªåä¸å¤©çæ»æ°ã</p>
+<p>å¨å å·å ç¡®è¯åçä¼¼ææCOVID-19èä½é¢çäººæ°æ»å±è¾¾å°äº3,557ï¼a decrease of 18æ¥èªåä¸å¤©çæ»æ°ãå¨å å·å ç¡®è¯åçä¼¼ææCOVID-19èè¿å¥ICUçäººæ°æ»å±è¾¾å°äº939ï¼a decrease of 20æ¥èªåä¸å¤©çæ»æ°ã</p>
 
 
 
