--- a/ar/v2-state-dashboard/index.html
+++ b/ar/v2-state-dashboard/index.html
@@ -164,8 +164,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">ØªØ­Ø¯ÙØ« Ø¨Ø®ØµÙØµ 14 مارس 2021</h2>
-        <p>Ø§Ø¹ØªØ¨Ø§Ø±ÙØ§ ÙÙ 14 مارس 2021Ø ÙÙØ¯ ÙØ§ÙØª ÙÙØ§ÙØ© ÙØ§ÙÙÙÙØ±ÙÙØ§ 3,526,335 Ø¨ØªØ£ÙÙØ¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙÙØµØ§Ø¨Ø© Ø¨ÙÙÙÙØ¯-19 Ø§ÙØªÙ ÙØªØ¬ Ø¹ÙÙØ§ 55,235 ÙÙÙØ§Øª.</p>
+        <h2 class="text-center color-purple">ØªØ­Ø¯ÙØ« Ø¨Ø®ØµÙØµ 15 مارس 2021</h2>
+        <p>Ø§Ø¹ØªØ¨Ø§Ø±ÙØ§ ÙÙ 15 مارس 2021Ø ÙÙØ¯ ÙØ§ÙØª ÙÙØ§ÙØ© ÙØ§ÙÙÙÙØ±ÙÙØ§ 3,528,795 Ø¨ØªØ£ÙÙØ¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙÙØµØ§Ø¨Ø© Ø¨ÙÙÙÙØ¯-19 Ø§ÙØªÙ ÙØªØ¬ Ø¹ÙÙØ§ 55,330 ÙÙÙØ§Øª.</p>
       </div>
     </div>
 
@@ -174,23 +174,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ø§ÙØ­Ø§ÙØ§Øª</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,526,335</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,772</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,528,795</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,460</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.4 <span class="text-300">Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙØ¬Ø¯ÙØ¯Ø© ÙÙÙ 100 Ø£ÙÙ</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.3 <span class="text-300">Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙØ¬Ø¯ÙØ¯Ø© ÙÙÙ 100 Ø£ÙÙ</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ø§ÙÙÙÙØ§Øª</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,235</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>140</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,330</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>95</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -204,29 +204,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,099,687</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>226,580</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,263,837</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>213,283</strong> <span class="text-300">Ø§ÙÙÙÙ</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 2Ø§ÙÙØ³Ø¨Ø© Ø§ÙÙØ¦ÙÙØ© <span class="text-300">ÙØ¥ÙØ¬Ø§Ø¨ÙØ© Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.9Ø§ÙÙØ³Ø¨Ø© Ø§ÙÙØ¦ÙÙØ© <span class="text-300">ÙØ¥ÙØ¬Ø§Ø¨ÙØ© Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Ø§ÙÙÙØ§Ø­Ø§Øª Ø§ÙÙØ¹Ø·Ø§Ø©</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>11,785,750</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>           
+          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>12,172,948</strong> <span class="text-300">Ø¥Ø¬ÙØ§ÙÙ</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">ÙØ­Ø¯Ø«Ø© 14 مارس 2021Ø Ø¨Ø¨ÙØ§ÙØ§Øª ÙÙ 13 مارس 2021.</p>
+        <p class="small-text">ÙØ­Ø¯Ø«Ø© 15 مارس 2021Ø Ø¨Ø¨ÙØ§ÙØ§Øª ÙÙ 14 مارس 2021.</p>
 
         <p class="small-text">ÙÙØ§Ø­Ø¸Ø©: ÙØ³ØªÙØ¯ ÙØ¹Ø¯Ù Ø§ÙØ¥ØµØ§Ø¨Ø§Øª Ø¹ÙÙ ÙØªÙØ³Ø· 7 Ø£ÙØ§Ù ÙØ¹ ØªØ£Ø®Ø± 7 Ø£ÙØ§Ù. ÙØªØ³ØªÙØ¯ ÙØ¹Ø¯ÙØ§Øª Ø§ÙÙÙÙØ§Øª Ø¥ÙÙ ÙØªÙØ³Ø· ÙØ¯Ø±Ù 7 Ø£ÙØ§Ù ÙØ¹ ØªØ£Ø®Ø± ÙØ¯Ø±Ù 21 ÙÙÙÙØ§ Ø¨Ø³Ø¨Ø¨ Ø§ÙØªØ£Ø®Ø± ÙÙ Ø§ÙØ¥Ø¨ÙØ§Øº. ÙÙØ³ØªÙØ¯ Ø§Ø®ØªØ¨Ø§Ø± Ø§ÙØ¥ÙØ¬Ø§Ø¨ÙØ© Ø¹ÙÙ ÙØªÙØ³Ø· 7 Ø£ÙØ§Ù ÙØ¹ Ø¹Ø¯Ù ÙØ¬ÙØ¯ ØªØ£Ø®ÙØ±. ÙÙÙØ§Ø±Ù Ø§ÙØªØºÙØ± ÙÙ Ø§ÙØ§ØªØ¬Ø§Ù Ø¨ÙØªØ±Ø© Ø§ÙØ³Ø¨Ø¹Ø© Ø£ÙØ§Ù Ø§ÙØ³Ø§Ø¨ÙØ©. ØªÙÙÙ Ø¥Ø¯Ø§Ø±Ø© Ø§ÙØµØ­Ø© Ø§ÙØ¹Ø§ÙØ© Ø¨ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¨ØªÙÙÙØ± Ø§ÙØ¨ÙØ§ÙØ§Øª.</p>
       </div>
@@ -272,7 +272,7 @@
 
 
 
-<p>ÙÙØ¯ ÙØ§ÙØª ÙÙØ§ÙØ© ÙØ§ÙÙÙÙØ±ÙÙØ§ 3,526,335 Ø¨ØªØ£ÙÙØ¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙÙØµØ§Ø¨Ø© Ø¨ÙÙÙÙØ¯-19 Ø§ÙØªÙ ÙØªØ¬ Ø¹ÙÙØ§ 55,235 ÙÙÙØ§Øª.</p>
+<p>ÙÙØ¯ ÙØ§ÙØª ÙÙØ§ÙØ© ÙØ§ÙÙÙÙØ±ÙÙØ§ 3,528,795 Ø¨ØªØ£ÙÙØ¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙÙØµØ§Ø¨Ø© Ø¨ÙÙÙÙØ¯-19 Ø§ÙØªÙ ÙØªØ¬ Ø¹ÙÙØ§ 55,330 ÙÙÙØ§Øª.</p>
 
 
 
@@ -307,7 +307,7 @@
 
 
 
-<p>ÙØµÙ Ø¹Ø¯Ø¯ ÙØªØ§Ø¦Ø¬ Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø§ÙØªØ´Ø®ÙØµÙØ© ÙÙÙÙÙØ¯-19 ÙÙ ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¥ÙÙ ÙØ§ ÙØ¬ÙÙØ¹Ù 51,099,687Ø Ø§ÙØ²ÙØ§Ø¯Ø© ÙÙ 226,580 Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø¹Ù ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù. ÙØ¹Ø¯Ù Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø§ÙØ¥ÙØ¬Ø§Ø¨ÙØ© Ø®ÙØ§Ù Ø§ÙØ£ÙØ§Ù 7 Ø§ÙÙØ§Ø¶ÙØ© ÙÙ â¦2â©Ùª.</p>
+<p>ÙØµÙ Ø¹Ø¯Ø¯ ÙØªØ§Ø¦Ø¬ Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø§ÙØªØ´Ø®ÙØµÙØ© ÙÙÙÙÙØ¯-19 ÙÙ ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¥ÙÙ ÙØ§ ÙØ¬ÙÙØ¹Ù 51,263,837Ø Ø§ÙØ²ÙØ§Ø¯Ø© ÙÙ 213,283 Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø¹Ù ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù. ÙØ¹Ø¯Ù Ø§ÙØ§Ø®ØªØ¨Ø§Ø±Ø§Øª Ø§ÙØ¥ÙØ¬Ø§Ø¨ÙØ© Ø®ÙØ§Ù Ø§ÙØ£ÙØ§Ù 7 Ø§ÙÙØ§Ø¶ÙØ© ÙÙ â¦1.9â©Ùª.</p>
 
 
 
@@ -342,7 +342,7 @@
 
 
 
-<p>ÙØ¯Ø§Ø®Ù ÙØ³ØªØ´ÙÙØ§Øª ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¨ÙØº Ø¹Ø¯Ø¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙØªÙ ÙØªÙ Ø¹ÙØ§Ø¬ÙØ§ ÙÙ ÙÙÙÙØ¯-19 Ø³ÙØ§Ø¡ ÙØ¤ÙØ¯Ø© Ø£Ù ÙØ´ØªØ¨Ù ÙÙÙØ§ ÙØ§ ÙØ¬ÙÙØ¹Ù 3,879Ø an increase of 190 ÙÙ ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù. ÙØ¯Ø§Ø®Ù ÙØ³ØªØ´ÙÙØ§Øª ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¨ÙØº Ø¹Ø¯Ø¯ ÙØ±Ø¶Ù ÙØ­Ø¯Ø§Øª Ø§ÙØ¹ÙØ§ÙØ© Ø§ÙÙØ±ÙØ²Ø© Ø§ÙØ°ÙÙ ÙÙØ¹Ø§ÙØ¬ÙÙ ÙÙ ÙÙÙÙØ¯-19 Ø³ÙØ§Ø¡ ÙØ§ÙØª Ø¥ØµØ§Ø¨ØªÙÙ ÙØ¤ÙØ¯Ø© Ø£Ù ÙØ´ØªØ¨Ù ÙÙÙØ§ ÙØ§ ÙØ¬ÙÙØ¹Ù 959Ø a decrease of 40 ÙÙ ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù.</p>
+<p>ÙØ¯Ø§Ø®Ù ÙØ³ØªØ´ÙÙØ§Øª ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¨ÙØº Ø¹Ø¯Ø¯ Ø§ÙØ­Ø§ÙØ§Øª Ø§ÙØªÙ ÙØªÙ Ø¹ÙØ§Ø¬ÙØ§ ÙÙ ÙÙÙÙØ¯-19 Ø³ÙØ§Ø¡ ÙØ¤ÙØ¯Ø© Ø£Ù ÙØ´ØªØ¨Ù ÙÙÙØ§ ÙØ§ ÙØ¬ÙÙØ¹Ù 3,557Ø a decrease of 18 ÙÙ ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù. ÙØ¯Ø§Ø®Ù ÙØ³ØªØ´ÙÙØ§Øª ÙØ§ÙÙÙÙØ±ÙÙØ§ Ø¨ÙØº Ø¹Ø¯Ø¯ ÙØ±Ø¶Ù ÙØ­Ø¯Ø§Øª Ø§ÙØ¹ÙØ§ÙØ© Ø§ÙÙØ±ÙØ²Ø© Ø§ÙØ°ÙÙ ÙÙØ¹Ø§ÙØ¬ÙÙ ÙÙ ÙÙÙÙØ¯-19 Ø³ÙØ§Ø¡ ÙØ§ÙØª Ø¥ØµØ§Ø¨ØªÙÙ ÙØ¤ÙØ¯Ø© Ø£Ù ÙØ´ØªØ¨Ù ÙÙÙØ§ ÙØ§ ÙØ¬ÙÙØ¹Ù 939Ø a decrease of 20 ÙÙ ÙØ¬ÙÙØ¹ Ø§ÙÙÙÙ Ø§ÙØ³Ø§Ø¨Ù.</p>
 
 
 
