--- a/ko/v2-state-dashboard/index.html
+++ b/ko/v2-state-dashboard/index.html
@@ -164,8 +164,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">ìë°ì´í¸ 2021년 3월 14일</h2>
-        <p>2021년 3월 14일 íì¬, ìºë¦¬í¬ëìì COVID-19 íì§ì ìë 3,526,335 ëªì´ë©° ì´ë¡ ì¸í ì¬ë§ì ìë 55,235 ëªìëë¤.</p>
+        <h2 class="text-center color-purple">ìë°ì´í¸ 2021년 3월 15일</h2>
+        <p>2021년 3월 15일 íì¬, ìºë¦¬í¬ëìì COVID-19 íì§ì ìë 3,528,795 ëªì´ë©° ì´ë¡ ì¸í ì¬ë§ì ìë 55,330 ëªìëë¤.</p>
       </div>
     </div>
 
@@ -174,23 +174,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">ì¬ë¡ ê±´ì</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,526,335</strong> <span class="text-300">í©ê³</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,772</strong> <span class="text-300">ë¹ì¼</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,528,795</strong> <span class="text-300">í©ê³</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,460</strong> <span class="text-300">ë¹ì¼</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.4 <span class="text-300">1ì­ë§ëª ë¹ ì ê· ì¬ë¡ ê±´ì</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6.3 <span class="text-300">1ì­ë§ëª ë¹ ì ê· ì¬ë¡ ê±´ì</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">ì¬ë§ì ì</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,235</strong> <span class="text-300">í©ê³</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>140</strong> <span class="text-300">ë¹ì¼</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,330</strong> <span class="text-300">í©ê³</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>95</strong> <span class="text-300">ë¹ì¼</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -204,29 +204,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">ê²ì¬ ê±´ì</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,099,687</strong> <span class="text-300">í©ê³</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>226,580</strong> <span class="text-300">ë¹ì¼</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,263,837</strong> <span class="text-300">í©ê³</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>213,283</strong> <span class="text-300">ë¹ì¼</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 2% <span class="text-300">ìì± ë°ìë¥ </span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.9% <span class="text-300">ìì± ë°ìë¥ </span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">ë°±ì  í¬ì¬ ê±´ì</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>11,785,750</strong> <span class="text-300">í©ê³</span>           </div>           
+          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>12,172,948</strong> <span class="text-300">í©ê³</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">2021년 3월 14일 ìë°ì´í¸, 2021년 3월 13일 ì ë°ì´í° ì¬ì©.</p>
+        <p class="small-text">2021년 3월 15일 ìë°ì´í¸, 2021년 3월 14일 ì ë°ì´í° ì¬ì©.</p>
 
         <p class="small-text">ì£¼ì: ì¬ë¡ ë°ìì¨ì 7ì¼ íê· ì ê¸°ì¤ì¼ë¡ íë©° 7ì¼ì ìì°¨ê° ììµëë¤. ì¬ë§ì¨ì 7ì¼ íê· ì ê¸°ì¤ì¼ë¡ íë©° ë³´ê³  ìì ì§ì°ì¼ë¡ ì¸í´ 21ì¼ ìì°¨ê° ììµëë¤. ìì± íì ì¨ì ìì°¨ ìì´ 7ì¼ íê· ì ê¸°ì¤ì¼ë¡ í©ëë¤. ì¶ì¸ ë³ê²½ì ì´ì  7ì¼ ê¸°ê°ê³¼ ë¹êµí©ëë¤. ë°ì´í°ë ìºë¦¬í¬ëìì£¼ ê³µì¤ë³´ê±´ë¶(California Department of Public Health)ìì ì ê³µí©ëë¤.</p>
       </div>
@@ -272,7 +272,7 @@
 
 
 
-<p>ìºë¦¬í¬ëìì COVID-19 íì§ì ìë 3,526,335 ëªì´ë©° ì´ë¡ ì¸í ì¬ë§ì ìë 55,235 ëªìëë¤.</p>
+<p>ìºë¦¬í¬ëìì COVID-19 íì§ì ìë 3,528,795 ëªì´ë©° ì´ë¡ ì¸í ì¬ë§ì ìë 55,330 ëªìëë¤.</p>
 
 
 
@@ -307,7 +307,7 @@
 
 
 
-<p>ìºë¦¬í¬ëì ë´ COVID-19 ì§ë¨ ê²ì¬ ê²°ê³¼ ìê° ì´ 51,099,687 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ë 226,580 ê±´ìëë¤. ì§ë 7ì¼ ê° ìì± ë°ìë¥ ì 2%ìëë¤.</p>
+<p>ìºë¦¬í¬ëì ë´ COVID-19 ì§ë¨ ê²ì¬ ê²°ê³¼ ìê° ì´ 51,263,837 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ë 213,283 ê±´ìëë¤. ì§ë 7ì¼ ê° ìì± ë°ìë¥ ì 1.9%ìëë¤.</p>
 
 
 
@@ -342,7 +342,7 @@
 
 
 
-<p>ìºë¦¬í¬ëì ë´ COVID-19 íì§ì ë° ìì¬ìë¡ ì¸í ìì íììë ì´ 3,879 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ì an increase of 190 ëªìëë¤. ìºë¦¬í¬ëì ë´ COVID-19 íì§ì ë° ìì¬ìë¡ ì¸í ICU íììë ì´ 959 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ì a decrease of 40 ëªìëë¤.</p>
+<p>ìºë¦¬í¬ëì ë´ COVID-19 íì§ì ë° ìì¬ìë¡ ì¸í ìì íììë ì´ 3,557 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ì a decrease of 18 ëªìëë¤. ìºë¦¬í¬ëì ë´ COVID-19 íì§ì ë° ìì¬ìë¡ ì¸í ICU íììë ì´ 939 ê±´ì ë¬íë©°, ì ì¼ ì´ê³ ëë¹ ì¦ê°ì a decrease of 20 ëªìëë¤.</p>
 
 
 
