Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,9 +1,9 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>Californians at higher risk from COVID-19 will soon be eligible for vaccination</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Californians at higher risk from COVID-19 are eligible for vaccination now</h2>
 
 
 
-<p>If you have a medical condition or disability that increases your risk of getting sick with COVID-19, or live or work in high-risk settings, you will be eligible for vaccination starting March 15th. Find out how to check your eligibility.</p>
+<p>If you have a medical condition or disability that increases your risk of getting sick with COVID-19, or live or work in high-risk settings, you can get vaccinated now. Find out how to see if you’re eligible and make an appointment.</p>
 
 
 
