Update page - stay-home-except-for-essential-needs.html dcc82cc849a3f8a6d8ba2e3c7a1ffe8805f5f34f

--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 9:52 AM</p>
+            <p class="small-text">Last updated&nbsp;March 15, 2021 at 12:25 PM</p>
           
         </div>
       </div>
@@ -213,7 +213,7 @@
 
 
 
-<p>The <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx" title="Open Limited Stay Home Order page at cdph.ca.gov">Limited Stay Home Order</a> (effective November 21, 2020) and its <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Supplement-to-Limited-Stay-At-Home-Order.aspx">Supplement</a> (effective December 22, 2020) required that in counties in the Widespread (purple) tier, Californians stay home between 10:00pm and 5:00am, with some exceptions. </p>
+<p>The <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Limited Stay Home Order</a> (effective November 21, 2020) and its <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Supplement-to-Limited-Stay-At-Home-Order.aspx">Supplement</a> (effective December 22, 2020) required that in counties in the Widespread (purple) tier, Californians stay home between 10:00pm and 5:00am, with some exceptions. </p>
 
 
 
