Update page - state-dashboard.html 2637b9f54d8de3b79e260e6bc8d5a4840fb911af

--- a/state-dashboard/index.html
+++ b/state-dashboard/index.html
@@ -489,8 +489,6 @@
 
   <h2 class="text-center color-purple">This data drives decisions that keep California healthy and safe</h2>
 
-
-
   <div class="grid-layout-hd bg-lightblue bd-lightblue">
     <div class="grid-main bg-lightblue py-2">
       <h3 class="my-0 text-center">California’s county risk levels</h3>
@@ -502,8 +500,6 @@
     <div class="grid-single single2">
       <div class="btn-matrix bg-red-btn">SUBSTANTIAL</div>
       <p class="text-small mt-2 mb-0">Some non-essential indoor business operations are closed</p>
-
-
     </div>
     <div class="grid-single single3">
       <div class="btn-matrix bg-orange-btn">MODERATE</div>
@@ -516,7 +512,7 @@
   </div>
 
   <h3 class="has-text-align-center pb-0 mb-2 mt-3" id="county-status">Current tier assignments as of March 12, 2021</h3>
-  <p class="mt-0">Tier assignments may occur any day of the week and may occur more than once a week. Select a county to see what region it’s in.</p>
+  <p class="mt-0">All data and tier assignments are updated weekly every Tuesday.</p>
 
   <div class="tableauPlaceholder mb-0" id="mapChartContainer"></div>
 </div>
