--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>سيكون سكان كاليفورنيا المعرضون الأكثر تعرضا لخطر الإصابة بكوفيد-19 مؤهلين قريبًا للتطعيم</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">إن سكان كاليفورنيا المعرضين لخطر الإصابة بكوفيد-19 مؤهلون الآن للتطعيم</h2>
 
 
 
-<p>إذا كانت لديك حالة طبية أو إعاقة تزيد من خطر إصابتك بكوفيد-19، أو تعيش أو تعمل في أماكن عالية الخطورة، فستكون مؤهلاً للحصول على اللقاح اعتبارًا من 15 مارس. اكتشف كيف تحقق من أهليتك.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">احصل على التفاصيل</a> 
+<p>إذا كانت لديك حالة طبية أو إعاقة تزيد من خطر إصابتك بكوفيد-19، أو تعيش أو تعمل في أماكن عالية الخطورة، فيمكنك الحصول على اللقاح الآن. تعرف على كيفية معرفة ما إذا كنت مؤهلاً وكيف تحدد موعدًا.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">احصل على التفاصيل</a> 
