--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>Los californianos con mayor riesgo de contraer COVID-19 pronto serán elegibles para la vacunación</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Los californianos con mayor riesgo de contraer COVID-19 ya son elegibles para la vacunación</h2>
 
 
 
-<p>Si usted tiene una afección médica o discapacidad que hace que aumente su riesgo de enfermarse de COVID-19, o vive o trabaja en entornos de alto riesgo, será elegible para recibir la vacuna a partir del 15 de marzo. Consulte cómo verificar su elegibilidad.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Obtenga los detalles.</a> 
+<p>Si usted tiene una afección médica o discapacidad que hace que aumente su riesgo de enfermarse de COVID-19, o vive o trabaja en entornos de alto riesgo, ya puede vacunarse. Descubra si es elegible y haga una cita.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Obtenga los detalles.</a> 
