--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>Magiging kwalipikado nang magpabakuna ang mga Californian na may mas malaking posibilidad na magkaroon ng COVID-19</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Kwalipikado na ngayong magpabakuna ang mga Californian na may mas malaking posibilidad na magkaroon ng COVID-19</h2>
 
 
 
-<p>Kung mayroon kang medikal na kundisyon o kapansanang nagpapalaki sa posibilidad mong mahawahan ng COVID-19, o kung nakatira o nagtatrabaho ka sa mga lugar na may malaking panganib, magiging kwalipikado ka nang magpabakuna simula sa Marso 15. Alamin kung paano malalaman kung kwalipikado ka.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Kunin ang mga detalye</a> 
+<p>Kung mayroon kang medikal na kundisyon o kapansanang nagpapalaki sa posibilidad mong mahawahan ng COVID-19, o kung nakatira o nagtatrabaho ka sa mga lugar na may malaking panganib, puwede ka nang magpabakuna ngayon. Alamin kung paano malalaman kung kwalipikado ka at kung paano magpa-appointment.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Kunin ang mga detalye</a> 
