--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>患COVID-19風險更高的加州民眾將很快有資格接種疫苗</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">患COVID-19風險更高的加州民眾現在有資格接種疫苗</h2>
 
 
 
-<p>如果您有會導致您患COVID-19風險更高的健康狀況或殘疾狀況，或在高風險場所居住或工作，則您自3月15日起有資格接種疫苗。了解如何查驗您的資格。</p><a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">獲取詳情</a> 
+<p>如果您有會導致您患COVID-19風險更高的健康狀況或殘疾狀況，或在高風險場所居住或工作，則您現在就可以接種疫苗。了解如何查看您是否符合資格並且預約疫苗接種</p><a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">獲取詳情</a> 
