--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>COVID-19 고위험군에 해당하는 캘리포니아 주민은 곧 백신을 접종받을 수 있게 됩니다</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">이제 COVID-19 고위험군에 해당하는 캘리포니아 주민은 백신 접종 자격자에 해당합니다</h2>
 
 
 
-<p>COVID-19 발병 위험을 더 크게 할 질환이나 장애가 있는 경우 또는 고위험 환경에서 거주하거나 근무하는 경우 3월 15일부터 백신을 접종받을 수 있습니다. 자격 해당 여부에 대한 확인 방법을 알아 보십시오.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">세부 사항을 확인하십시오</a> 
+<p>COVID-19 발병 위험을 더 크게 할 질환이나 장애가 있는 경우 또는 고위험 환경에서 거주하거나 근무하는 경우지금 백신을 접종받을 수 있습니다. 자격 해당 여부 확인 및 예약 방법에 대해 알아 보십시오.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">세부 사항을 확인하십시오</a> 
