--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong><strong><strong>Những người California có nguy cơ cao hơn do bệnh COVID-19 sẽ sớm hội đủ điều kiện để được tiêm vắc-xin</strong></strong></strong></strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Những người dân California có nguy cơ cao hơn do bệnh COVID-19 hội đủ điều kiện để được tiêm vắc-xin vào thời điểm này</h2>
 
 
 
-<p>Nếu có bệnh trạng hoặc khuyết tật làm tăng nguy cơ mắc bệnh COVID-19 hoặc sống hay làm việc ở những môi trường có nguy cơ cao, quý vị sẽ hội đủ điều kiện được tiêm vắc-xin bắt đầu từ ngày 15 tháng 3. Tìm hiểu cách kiểm tra tình trạng hội đủ điều kiện của quý vị.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Nhận thông tin chi tiết</a> 
+<p>Nếu có bệnh trạng hoặc khuyết tật làm tăng nguy cơ mắc bệnh COVID-19 hoặc sống hoặc làm việc ở những môi trường có nguy cơ cao, quý vị có thể được tiêm vắc-xin vào thời điểm này. Hãy tìm hiểu cách xem quý vị có đủ điều kiện hay không và đặt lịch hẹn.</p>    <a href="https://covid19.ca.gov/vaccines/" class="action-link pt-3 pb-3 px-4">Nhận thông tin chi tiết</a> 
