Update page - education.html 2e1a6f642bd6e924ef2e036fc0b432b53eaa4ed0

--- a/education/index.html
+++ b/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;March 11, 2021 at 11:29 AM</p>
+            <p class="small-text">Last updated&nbsp;March 16, 2021 at 1:41 PM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<ul><li><a href="#vaccines-for-educators">Vaccines for K-12 school staff and childcare providers</a></li><li><a href="#k-12-guidance">K-12 guidance</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">Higher education guidance</a></li></ul>
+<ul class="toc"><li><strong><a href="#vaccines-for-educators">Vaccines for K-12 school staff and childcare providers</a></strong></li><li><strong><a href="#k-12-guidance">K-12 guidance</a></strong></li><li><strong><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">Higher education guidance</a></strong></li></ul>
 
 
 
