Update page - vaccines.html f4f045f9bd95ac94210d17bc5fbea9efe35f0bf8

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 16, 2021 at 11:54 AM</p>
+            <p class="small-text">Last updated&nbsp;March 16, 2021 at 8:47 PM</p>
           
         </div>
       </div>
@@ -500,6 +500,14 @@
 
 
 <blockquote class="wp-block-quote"><p><a href="https://vaccinefinder.org/" class="action-link pt-3 pb-3 px-4"><strong>Find vaccinations near you</strong></a></p></blockquote>
+
+
+
+<p>Most Californians will be vaccinated at:</p>
+
+
+
+<ul><li>Hospitals</li><li>Community vaccination sites</li><li>Doctor&#8217;s offices</li><li>Clinics</li><li>Pharmacies</li></ul>
 
 
 
