Update page - help-for-seniors.html dca27f66ca4b1d32b8ac3d90aa1420b307f1608d

--- a/help-for-seniors/index.html
+++ b/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for older adults</h1>
           
-            <p class="small-text">Last updated&nbsp;March 17, 2021 at 9:12 AM</p>
+            <p class="small-text">Last updated&nbsp;March 17, 2021 at 9:23 AM</p>
           
         </div>
       </div>
@@ -217,7 +217,7 @@
 
 
 
-<p>More details about receiving meals are available in the <a href="https://files.covid19.ca.gov/pdf/great-plates-delivered-participants-faqs.pdf">participant FAQ<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
+<p>More details about receiving meals are available in the <a href="https://files.covid19.ca.gov/pdf/great-plates-delivered-participants-faqs.pdf">participant FAQ</a>.</p>
 
 
 
@@ -269,7 +269,7 @@
 
 
 
-<ul><li><a href="https://aging.ca.gov/download.ashx?lE0rcNUV0zaaXLD5JZ%2f6Uw%3d%3d">Frequently asked questions for friends and family<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li><li><a href="https://www.engageca.org/s/Caring-From-Afar-Resources.pdf">Caregiving From Afar: Questions to ask the facility<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li><li><a href="https://theconsumervoice.org/issues/other-issues-and-resources/covid-19#ltc-ind">Coronavirus in Long-Term Care:&nbsp;Information for Advocates<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li><li><a href="https://dailycaring.com/nursing-home-lockdown-6-ways-to-stay-connected-with-seniors-during-a-coronavirus-scare/">6 Ways to Stay Connected with Seniors<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li></ul>
+<ul><li><a href="https://aging.ca.gov/download.ashx?lE0rcNUV0zaaXLD5JZ%2f6Uw%3d%3d">Frequently asked questions for friends and family<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li><li><a href="https://www.engageca.org/s/Caring-From-Afar-Resources.pdf">Caregiving From Afar: Questions to ask the facility</a></li><li><a href="https://theconsumervoice.org/issues/other-issues-and-resources/covid-19#ltc-ind">Coronavirus in Long-Term Care:&nbsp;Information for Advocates<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li><li><a href="https://dailycaring.com/nursing-home-lockdown-6-ways-to-stay-connected-with-seniors-during-a-coronavirus-scare/">6 Ways to Stay Connected with Seniors<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span></a></li></ul>
 
 
 
