Update page - get-financial-help.html eb16d52e1f3006614af28d4ef056e307ef82d964

--- a/get-financial-help/index.html
+++ b/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Get financial help</h1>
           
-            <p class="small-text">Last updated&nbsp;February 17, 2021 at 3:18 PM</p>
+            <p class="small-text">Last updated&nbsp;March 17, 2021 at 11:22 AM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<ul><li><strong><a href="https://covid19.ca.gov/get-financial-help/#unemployment-insurance">Unemployment insurance</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#eviction-protection">Eviction protection</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#mortgage-relief">Mortgage relief&nbsp;</a></strong></li><li><strong><a href="#small-business-relief">Small business and employer relief </a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#food-assistance">Food assistance</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#credit-score">No credit score changes</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="https://covid19.ca.gov/get-financial-help/#unemployment-insurance">Unemployment insurance</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#eviction-protection">Eviction protection</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#mortgage-relief">Mortgage relief&nbsp;</a></strong></li><li><strong><a href="#small-business-relief">Small business and employer relief </a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#food-assistance">Food assistance</a></strong></li><li><strong><a href="https://covid19.ca.gov/get-financial-help/#credit-score">No credit score changes</a></strong></li></ul>
 
 
 
